samples/_failures_safe/1761618603_337bd5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_547f85a1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_547f85a1.c:168:13: error: expected declaration or statement at end of input
  168 |             }
      |             ^
./samples/SAFE/__tmp_547f85a1.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_547f85a1.c:168:13: error: expected declaration or statement at end of input
